--- a/EECIP/Views/Forum/ShowTopic.cshtml
+++ b/EECIP/Views/Forum/ShowTopic.cshtml
@@ -1,13 +1,12 @@
 ﻿@model EECIP.Models.vmForumTopicView
 @{
-    //ViewBag.Title = "Discussion Topic";
-    //ViewBag.ShowBack = true;
-
-    string orderBy = "newest";
+    string orderBy = "";
     if (HttpContext.Current.Request.QueryString["order"] != null)
     {
         orderBy = HttpContext.Current.Request.QueryString["order"].ToString();
     }
+
+    string orderBy2 = orderBy != "newest" ? "newest" : "";
 }
 @Html.HiddenFor(x => x.Topic.Id)
 <div class="row">
@@ -99,7 +98,7 @@
                         @if (Model.Posts != null && Model.Posts.Count() > 1)
                         {
                             <text> Order By:
-                                <a href="@Url.Action("ShowTopic", "Forum", new { slug = Model.Topic.Slug, order="newest" })" class="@(orderBy=="votes" ? "" : "text-bold")">Newest First</a> |
+                                <a href="@Url.Action("ShowTopic", "Forum", new { slug = Model.Topic.Slug, order=orderBy2 })" class="@(orderBy=="votes" ? "" : "text-bold")">Newest @(orderBy!="newest" ? "First" : "Last")</a> |
                                 <a href="@Url.Action("ShowTopic", "Forum", new { slug = Model.Topic.Slug, order="votes" })" class="@(orderBy=="votes" ? "text-bold" : "")">Votes</a>
                             </text>
                         }
