April / May updates

--- a/EECIP/Views/Account/Subscriptions.cshtml
+++ b/EECIP/Views/Account/Subscriptions.cshtml
@@ -113,7 +113,7 @@
                     </div>
                     <div class="form-group">
                         @Html.CheckBoxFor(model => model.NOTIFY_NEWSLETTER, new { @class = "checkbox, display-inline" })
-                        <label style="display:inline;">Get a quarterly newsletter with updates targetted to your subscribed topics</label>
+                        <label style="display:inline;">Get a monthly newsletter with updates targetted to your subscribed topics</label>
                     </div>
                     <button type="submit" name="submitButton" value="Save" class="btn btn-primary">Save</button>
                 </div>
