--- a/EECIP/Views/Dashboard/UserCard.cshtml
+++ b/EECIP/Views/Dashboard/UserCard.cshtml
@@ -11,7 +11,7 @@
 <div class="row">
     <div class="col-lg-4 col-sm-6">
         <div class="circle-tile">
-            <div class="circle-tile-heading" style="background-image:url(/Content/Images/Users/@(Model.User.USER_IDX).png)">
+            <div class="circle-tile-heading" style="margin: 0 auto -40px; background-image:url(/Content/Images/Users/@(Model.User.USER_IDX).png)">
             </div>
             <div class="circle-tile-content dark-blue">
                 <div class="circle-tile-description text-faded">
