1. Add Admin --> Export --> Likes 2. Enhance newsletter to include all projects/discussions if no interests match 3. Display projects with attachments in search results

--- a/EECIP/Views/Dashboard/Index.cshtml
+++ b/EECIP/Views/Dashboard/Index.cshtml
@@ -10,7 +10,7 @@
 
 @if (!string.IsNullOrEmpty(Model.Announcement))
 {
-    <div class="alert alert-block alert-info fade in">
+    <div class="alert alert-block alert-warning fade in">
         <button data-dismiss="alert" class="close" type="button">×</button>
         @Html.Raw(HttpUtility.HtmlDecode(Model.Announcement))
     </div>
