--- a/EECIP/Views/Shared/EditorTemplates/forumeditor.cshtml
+++ b/EECIP/Views/Shared/EditorTemplates/forumeditor.cshtml
@@ -5,12 +5,12 @@
         selector: "textarea.rte",
         browser_spellcheck: true,
         branding: false,
-        plugins: [ "link lists hr code wordcount emoticons "],
+        plugins: [ "link lists hr code wordcount emoticons textcolor"],
         //plugins: [
         //    "autosave image anchor forumimageinsert",
         //    "visualblocks visualchars code fullscreen media nonbreaking"
         //],
-        toolbar1: "emoticons bold italic underline strikethrough bullist hr | link unlink code blockquote | formatselect",
+        toolbar1: "emoticons bold italic underline strikethrough bullist hr | link unlink code blockquote | formatselect | forecolor backcolor",
         remove_linebreaks: false,
         relative_urls: false,
         menubar: false,
