--- a/EECIP/Views/Admin/ExportData.cshtml
+++ b/EECIP/Views/Admin/ExportData.cshtml
@@ -52,6 +52,12 @@
                                             <input type="checkbox" name="exportdata" value="Search" />
                                         </td>
                                     </tr>
+                                    <tr>
+                                        <td style="padding:5px;">Likes</td>
+                                        <td style="padding:5px;">
+                                            <input type="checkbox" name="exportdata" value="Likes" />
+                                        </td>
+                                    </tr>
 
                                 </table>
                             </div>
