set TinyMCE option for full-path URLs

--- a/EECIP/Views/Shared/EditorTemplates/forumeditor.cshtml
+++ b/EECIP/Views/Shared/EditorTemplates/forumeditor.cshtml
@@ -12,7 +12,11 @@
         //],
         toolbar1: "emoticons bold italic underline strikethrough bullist hr | link unlink code blockquote | formatselect | forecolor backcolor",
         remove_linebreaks: false,
+
         relative_urls: false,
+        remove_script_host: false,
+        convert_urls: true,
+
         menubar: false,
         toolbar_items_size: 'small',
        // content_css: app_base + "content/tinymce.css",
